# HUST-Lab-Programming

./: README.md
backend/SmartCardManager/: CMakeLists.txt  libMain.cpp  libMain.h
backend/SmartCardManager/Analyzer/: Analyzer.cpp  Analyzer.h
backend/SmartCardManager/BatchManage/: BatchManager.cpp  BatchManager.h
backend/SmartCardManager/CardManage/: CardManageLogger.cpp  CardManageLogger.h  CardManager.cpp  CardManager.h
backend/SmartCardManager/PosManage/: PosDevice.cpp  PosDevice.h  PosManager.cpp  PosManager.h
backend/py_server/: SmartCardManager.exp  SmartCardManager.lib  app.py  bridge.py
data/: cz002.txt  wz003.txt  说明.txt
docs/: 2020级程序设计综合课程设计任务书03.docx  课程设计要求讲解2201.pptx
frontend/SmartSchool/: package-lock.json  package.json  tailwind.config.js
frontend/SmartSchool/src/: App.vue  main.js
frontend/SmartSchool/src/components/: ProgressBar.vue
frontend/SmartSchool/src/pages/: Analysis.vue  CardManage.vue  Client.vue  Main.vue
frontend/SmartSchool/src/pages/CardManageSub/: BatchOperation.vue  ChargeMoney.vue  CreateCard.vue  DeleteAccount.vue  FindFriends.vue  FuzzyQuery.vue  GetInfoByStuId.vue  LockAccount.vue  Log.vue  OpenAccount.vue  UnLockAccount.vue
